Change file name

--- a/css/impress-demo.css
+++ b/css/impress-demo.css
@@ -1026,7 +1026,7 @@ a {
 
 .type {
     text-shadow: 2px 2px 4px rgba(0, 0, 0, .2);
-    background-image: url("Public_key_encryption.svg");
+    background-image: url("Public_key_encryption.png");
     background-position: 55% 65%;
     background-repeat: no-repeat;
     background-size: 55%;
